<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBgColor"
        tools:context=".OrderPage">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="65dp"
            android:background="@color/asideBgColor"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/constraintLayout">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_hot_deal"
                android:id="@+id/imageView"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="1dp"
                android:contentDescription="@string/sales_icon"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/contacts"
                android:text="@string/contacts_text"
                android:layout_width="100dp"
                android:layout_height="145dp"
                android:rotation="-90"
                android:gravity="center"
                android:fontFamily="sans-serif-black"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="100dp"
        />

        <TextView
                android:id="@+id/about"
                android:text="@string/about_text"
                android:layout_width="100dp"
                android:layout_height="145dp"
                android:rotation="-90"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/contacts"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/main_activity"
                android:text="@string/main_activity_text"
                android:layout_width="100dp"
                android:layout_height="145dp"
                android:rotation="-90"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/about"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:text="@string/logo_of_app1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo_of_app1"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            android:layout_marginStart="40dp"
    />

    <TextView
            android:text="@string/logo_of_app2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo_of_app2"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/name_of_app"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toEndOf="@+id/logo_of_app1"
            android:layout_marginStart="32dp"
            tools:ignore="TextContrastCheck"
    />
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/logo_of_app2"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout" android:layout_marginStart="40dp"
            android:layout_marginTop="20dp" android:layout_marginEnd="40dp" android:layout_marginBottom="30dp"
            android:id="@+id/ordersList"/>

</androidx.constraintlayout.widget.ConstraintLayout>