<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coursePageBg"
        android:background="@color/black"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CoursePage">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="65dp"
            android:background="@color/asideBgColor"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/constraintLayout">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_hot_deal"
                android:id="@+id/imageView"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="1dp"
                android:contentDescription="@string/sales_icon"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/contacts"
                android:text="@string/contacts_text"
                android:layout_width="100dp"
                android:layout_height="145dp"
                android:rotation="-90" android:gravity="center"
                android:fontFamily="sans-serif" android:textSize="20sp" android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="3dp" android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="100dp"/>

        <TextView
                android:id="@+id/about"
                android:text="@string/about_text"
                android:layout_width="100dp"
                android:layout_height="145dp"
                android:rotation="-90"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/contacts"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/main_activity"
                android:text="@string/main_activity_text"
                android:layout_width="100dp"
                android:layout_height="145dp"
                android:rotation="-90" android:gravity="center"
                android:fontFamily="sans-serif-black" android:textSize="20sp" android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/about" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="3dp" android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/coursePageImage"
            android:layout_width="0dp"
            android:layout_height="230dp"
            app:srcCompat="@drawable/ic_java_2_2_"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            android:scaleType="centerCrop"/>
    <TextView
            android:gravity="center"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/coursePageTitle"
            app:layout_constraintTop_toBottomOf="@+id/coursePageImage" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            android:textColor="@color/white" android:textSize="25dp" android:fontFamily="sans-serif-black"
            android:layout_marginTop="5dp"/>

    <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@android:color/transparent"
            android:id="@+id/courseBg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/constraintLayout">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif"
                        android:layout_margin="10dp"
                        android:textSize="14sp"
                        android:text="@string/course_start_date" android:gravity="center"/>

                <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="55dp"
                        android:textSize="14sp"
                        android:text="@string/course_level"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/coursePageDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-black"
                        android:layout_margin="10dp"
                        android:textSize="14sp"
                        android:text="@string/app_name"/>

                <TextView

                        android:id="@+id/coursePageLevel"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="40dp"
                        android:textSize="14sp"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"/>
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
            android:textSize="14dp"
            android:textColor="@color/white"
            android:text="@string/course_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/coursePageText"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/courseBg"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp" android:layout_marginTop="15dp"/>
    <ImageButton

            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_shop"
            android:id="@+id/addToCart"
            app:layout_constraintTop_toBottomOf="@+id/coursePageText"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="45dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>