<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:id="@+id/courseBg"
            app:contentPaddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

            <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_java_2_2_"
                    android:id="@+id/courseImage" android:transitionName="courseImage"/>
            <TextView
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/courseTitle"
                    android:fontFamily="sans-serif-black"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif"
                        android:layout_margin="10dp"
                        android:textSize="14sp"
                        android:text="@string/course_start_date"/>

                <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="25dp"
                        android:textSize="14sp"
                        android:text="@string/course_level"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/courseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-black"
                        android:layout_margin="10dp"
                        android:textSize="14sp"
                        android:text="@string/app_name"/>

                <TextView
                        android:id="@+id/courseLevel"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="25dp"
                        android:textSize="14sp"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"/>
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>